--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
         <h1 class="mt-10 text-center font-bold text-4xl">My <span class="text-blue-500">Banking</span> App</h1>
     </header>
-    <main class="bg-blue-300 py-20 px-10 my-10 w-1/3 mx-auto">
+    <main class="bg-blue-300 py-10 px-8 my-10 w-1/3 mx-auto">
         <section>
-            <h1 class="text-center font-semibold text-2xl underline">Login</h1>
+            <h1 class="my-4 text-center font-semibold text-2xl underline">Login</h1>
         </section>
         <section>
-            <input class="bg-blue-200 px-4 py-3 w-full my-1" type="text" placeholder="user@email.com">
-            <input class="bg-blue-200 px-4 py-3 w-full my-1" type="password" placeholder="password">
-            <button class="px-4 py-2 bg-blue-500 text-white font-semibold hover:bg-blue-600">Login</button>
+            <input id="user_email" class="bg-blue-200 px-4 py-3 w-full my-1" type="text" placeholder="user@email.com">
+            <input id="user_password" class="bg-blue-200 px-4 py-3 w-full my-1" type="password" placeholder="password">
+            <button id="user_login" class="px-4 py-2 bg-blue-500 text-white font-semibold hover:bg-blue-600">Login</button>
         </section>
     </main>
     <script src="script.js"></script>
