deposit section ready

--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,34 @@
     <header>
         <h1 class="mt-10 text-center text-4xl font-bold">User <span class="text-blue-500">Dashboard</span></h1>
     </header>
-
+    <main>
+        <div class="mt-10 grid grid-cols-1 md:grid-cols-3 w-full md:w-3/4 mx-auto gap-10">
+            <section class="bg-green-400 text-center px-8 py-4 rounded-lg">
+                <h2 class="text-3xl font-medium">Deposit</h2>
+                <h2 class="text-3xl font-medium"><span id="current-deposit">00</span> BDT</h2>
+            </section>
+            <section class="bg-red-400 text-center px-8 py-4 rounded-lg">
+                <h2 class="text-3xl font-medium">Withdraw</h2>
+                <h2 class="text-3xl font-medium">00 BDT</h2>
+            </section>
+            <section class="bg-blue-400 text-center px-8 py-4 rounded-lg">
+                <h2 class="text-3xl font-medium">Balance</h2>
+                <h2 class="text-3xl font-medium"><span id="current-balance">1000</span> BDT</h2>
+            </section>
+        </div>
+        <div class="mt-28 w-3/4 mx-auto grid grid-cols-1 md:grid-cols-2 gap-5 md:gap-10">
+            <section class="bg-green-500 p-10 rounded-lg">
+                <h1 class="font-bold text-4xl">Deposit</h1>
+                <input id="deposit-amount" class="w-full bg-green-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
+                <button id="deposit" class="px-6 py-3 bg-green-600 text-white hover:bg-green-700">Submit</button>
+            </section>
+            <section class="bg-red-500 p-10 rounded-lg">
+                <h1 class="font-bold text-4xl">Withdraw</h1>
+                <input class="w-full bg-red-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
+                <button class="px-6 py-3 bg-red-600 text-white hover:bg-red-700">Submit</button>
+            </section>
+        </div>
+    </main>
 
     <script src="dashboard.js"></script>
 </body>
