--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
             </section>
             <section class="bg-red-400 text-center px-8 py-4 rounded-lg">
                 <h2 class="text-3xl font-medium">Withdraw</h2>
-                <h2 class="text-3xl font-medium">00 BDT</h2>
+                <h2 class="text-3xl font-medium"><span id="current-withdraw">00</span> BDT</h2>
             </section>
             <section class="bg-blue-400 text-center px-8 py-4 rounded-lg">
                 <h2 class="text-3xl font-medium">Balance</h2>
@@ -34,8 +34,8 @@
             </section>
             <section class="bg-red-500 p-10 rounded-lg">
                 <h1 class="font-bold text-4xl">Withdraw</h1>
-                <input class="w-full bg-red-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
-                <button class="px-6 py-3 bg-red-600 text-white hover:bg-red-700">Submit</button>
+                <input id="withdraw-amount" class="w-full bg-red-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
+                <button id="withdraw" class="px-6 py-3 bg-red-600 text-white hover:bg-red-700">Submit</button>
             </section>
         </div>
     </main>
