input issues solved

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,12 +29,12 @@
         <div class="mt-28 w-3/4 mx-auto grid grid-cols-1 md:grid-cols-2 gap-5 md:gap-10">
             <section class="bg-green-500 p-10 rounded-lg">
                 <h1 class="font-bold text-4xl">Deposit</h1>
-                <input id="deposit-amount" class="w-full bg-green-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
+                <input id="deposit-amount" class="w-full bg-green-300 px-6 py-3 my-4" type="number" placeholder="Deposit Amount">
                 <button id="deposit" class="px-6 py-3 bg-green-600 text-white hover:bg-green-700">Submit</button>
             </section>
             <section class="bg-red-500 p-10 rounded-lg">
                 <h1 class="font-bold text-4xl">Withdraw</h1>
-                <input id="withdraw-amount" class="w-full bg-red-300 px-6 py-3 my-4" type="text" placeholder="Deposit Amount">
+                <input id="withdraw-amount" class="w-full bg-red-300 px-6 py-3 my-4" type="number" placeholder="Deposit Amount">
                 <button id="withdraw" class="px-6 py-3 bg-red-600 text-white hover:bg-red-700">Submit</button>
             </section>
         </div>
