--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,7 @@
         </div>
     </main>
 
-    <script src="dashboard.js"></script>
+    <script src="functionalDashboard.js"></script>
+    <!-- <script src="dashboard.js"></script> -->
 </body>
 </html>
